# Campus-Auth

./: .coverage  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  ECampus-Auth-api-optimizetest_full_output.txt  LICENSE  LOGGING_OPTIMIZATION_PLAN.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_REPORT.md  README.md  REFACTOR_PLAN.md  app.py  app_cli.py  bugs-fix-plan.md  bugs-report-2026-06-22.md  code-fix.md  code-review-report.md  config-system-audit-2026-06-22.md  e2e_coverage_review.md  install.go  install.sh  launcher.bat  launcher.py  main.py  package_zip.ps1  pyproject.toml  requirements.txt  setup_env.ps1  setup_env.sh  start.go  start.sh  test_full_output.txt  test_output.txt  test_result.txt  uninstall.py  启动.bat  启动.sh  启动请看我.md
.claude/: change.md  not-to-do.md  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.omo/: boulder.json
.opencode/: lsp.json
app/: __init__.py  application.py  constants.py  container.py  deps.py  schemas.py  system_tray.py  version.py  ws_manager.py
backend/: __init__.py  autostart_service.py  config_service.py  constants.py  container.py  debug_manager.py  debug_session.py  deps.py  login_history_service.py  main.py  monitor_service.py  profile_service.py  scheduler_service.py  schemas.py  task_service.py  uninstall_service.py  ws_manager.py
config/: settings.json
dev/: change.md
deve/: code-review-report.md  fix-plan.md
development/: change.md  changelog-pending.md  code-review-and-doc-audit-2026-05-09.md
doc/: 1.md  AUDIT-ROADMAP.md  SECURITY-LIMITATIONS.md  api-doc.md  changelog-pending.md  code-review.md  code-scan-report.md  comprehensive-code-review.md  next-step-implementation-plan.md  task-manual.md  task-system.md  task-writing-guide.md  update_log.md  代码审查报告.md  使用说明.md
docs/: 2026-06-13-code-review-fix-design.md  2026-06-13-log-restructure-design.md  2026-06-13-log-restructure-plan.md  2026-06-27-code-quality-optimization-design.md  2026-06-27-project-standards-design.md  2026-06-27-project-standards-plan.md  2026-07-01-worker-process-isolation-design.md  2026-07-01-worker-process-isolation-plan.md  2026-07-03-appearance-redesign-design.md  2026-07-04-code-review-report.md  Index.md  api-conventions.md  api-doc.md  bug-review-2026-07-12.md  changelog.md  code-audit-2026-06-09-v2.md  code-audit-2026-06-09.md  code-audit-report.md  code-review-report.md  code-review-verified-report.md  code-style-guide.md  custom-script-guide.md  login.md  ponytail-audit-2026-06-29.md  ponytail-audit-review-2026-06-29.md  task-manual.md  task-writing-guide.md  update_log.md
frontend/: app.js  index.html  style.css  template-loader.js
issue/: audit-report-2026-06-20.md  bug_report.md  code-review-login-chain-2026-06-19.md  fix-plan-2026-06-20.md  refactor-plan-2026-06-20.md
packaging/: README.md  build_macos.sh  build_windows.bat
reviews/: frontend-workers-review.md
src/: __init__.py  campus_login.py  monitor_core.py  network_decision.py  network_detect.py  network_probes.py  network_test.py  playwright_bootstrap.py  playwright_worker.py  script_runner.py  system_tray.py  task_executor.py  utils.py  version.py
tasks/: .order.json  1.json  click-isp.json  click_isp.json  danger_test.json  default.json  drcom.json  hidden_input.json  no-isp.json  ruijie.json  sample.json  sample_2.json  select-isp.json  select_isp.json  srun.json  test_http_login.meta.json  test_http_login.py
tests/: conftest.py  test_api.py  test_api_autostart_routes.py  test_api_backup.py  test_api_backup_routes.py  test_api_config.py  test_api_config_routes.py  test_api_debug_routes.py  test_api_history.py  test_api_history_routes.py  test_api_logfiles.py  test_api_logfiles_routes.py  test_api_monitor_routes.py  test_api_profiles_routes.py  test_api_repo_routes.py  test_app.py  (+106 more)
(+528 files in other folders)
