[project]
name = "campus-auth"
version = "4.0.2"
description = "校园网自动认证工具，前后端分离（FastAPI + Web UI）"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright",
    "fastapi",
    "uvicorn",
    "pydantic",
    "httpx",
    "pystray",
    "Pillow",
    "cairosvg",
    "cryptography",
    "python-multipart",
    "loguru",
    "websockets>=16.0",
]

[tool.uv]
python-install-mirror = "https://registry.npmmirror.com/-/binary/python-build-standalone/"

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[tool.ruff.lint.per-file-ignores]
"app/application.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
