[project]
name = "campus-auth"
version = "4.0.2"
description = "校园网自动认证工具，前后端分离（FastAPI + Web UI）"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.60.0,<2.0.0",
    "fastapi>=0.136.3,<1.0.0",
    "uvicorn>=0.49.0,<1.0.0",
    "pydantic>=2.13.4,<3.0.0",
    "httpx>=0.28.1,<1.0.0",
    "pystray>=0.19.5,<1.0.0",
    "Pillow>=12.2.0,<13.0.0",
    "cairosvg>=2.9.0,<3.0.0",
    "cryptography>=48.0.0,<49.0.0",
    "python-multipart>=0.0.32,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "websockets>=16.0,<17.0",
]

[tool.uv]
python-install-mirror = "https://registry.npmmirror.com/-/binary/python-build-standalone/"

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[tool.ruff.lint.per-file-ignores]
"app/application.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
