[project]
name = "campus-auth"
version = "4.2.2"
description = "校园网自动认证工具，前后端分离（FastAPI + Web UI）"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "playwright>=1.60.0,<2.0.0",
    "fastapi>=0.136.3,<1.0.0",
    "uvicorn>=0.49.0,<1.0.0",
    "pydantic>=2.13.4,<3.0.0",
    "httpx>=0.28.1,<1.0.0",
    "pystray>=0.19.5,<1.0.0",
    "Pillow>=12.2.0,<13.0.0",
    "cairosvg>=2.9.0,<3.0.0",
    "cryptography>=48.0.0,<49.0.0",
    "python-multipart>=0.0.32,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "websockets>=16.0,<17.0",
    "psutil>=7.2.2",
]

[tool.uv]
python-install-mirror = "https://registry.npmmirror.com/-/binary/python-build-standalone/"

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[tool.ruff.lint]
select = ["E", "F", "B", "SIM", "UP", "PT", "RUF", "I"]
ignore = [
    "RUF001",  # 字符串中的全角字符（中文项目正常）
    "RUF002",  # 文档字符串中的全角字符
    "RUF003",  # 注释中的全角字符
    "B008",    # FastAPI Depends 在默认参数中使用是标准做法
    "E501",    # 行长度，改动量大风险高
    "RUF012",  # 类变量 ClassVar 注解，改动量大
    "PT019",   # pytest fixture 参数注入风格
    "PT011",   # pytest.raises 过于宽泛
    "PT017",   # pytest 断言中使用 in
    "SIM115",  # 使用 context manager 打开文件（需要保持引用的场景不适合）
    "RUF006",  # store reference to create_task（事件循环退出后自动清理）
]

[tool.ruff.lint.per-file-ignores]
"app/application.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--strict-markers --tb=short --import-mode=importlib"
markers = [
    "slow: 标记需要等待真实时间的慢测试（如定时任务调度）",
]
filterwarnings = [
    "ignore:.*AsyncMockMixin.*:RuntimeWarning",
    "ignore:.*httpx.*:UserWarning",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.11.9,<0.12.0",
]
